--- a/src/shared/components/FormInput/formInput.module.scss
+++ b/src/shared/components/FormInput/formInput.module.scss
@@ -1,3 +1,15 @@
-.item{
- padding: 10px;
-}
+ .form__input__group {
+     margin-bottom: 1rem;
+ }
+
+.form__input {
+     display: block;
+     width: 100%;
+     padding: 0.75rem;
+     box-sizing: border-box;
+     border-radius: var(--border-input);
+     border: 1px solid #dddddd;
+     outline: none;
+     background: #eeeeee;
+     transition: background 0.2s, border-color 0.2s
+ }
