--- a/src/modules/CommentContainer/comment-container.module.css
+++ b/src/modules/CommentContainer/comment-container.module.css
@@ -4,6 +4,7 @@
     margin: auto;
     margin-top: 20px;
     border-radius: 10px;
+    box-shadow: 0 0 40px rgb(0 0 0 / 20%);
 }
 
 .contentWritingpart {
@@ -31,3 +32,18 @@
     width: 24px;
     height: 24px;
 }
+
+.postFormBtn{
+        height: "30px";
+         margin-right: "12px";
+          margin-top: "40px"; 
+          padding-left: "20px"; 
+          padding-right: "20px"; 
+          padding-top: 6px; 
+          padding-bottom: 6px; 
+          border: "none"; 
+          background-color: "#ff8000"; 
+          color: "white"; 
+          border-radius: "5px"; 
+          cursor: "pointer";
+    }
