created inner comment

--- a/src/modules/CommentContainer/FormCommentContainer/comment-container.module.scss
+++ b/src/modules/CommentContainer/FormCommentContainer/comment-container.module.scss
@@ -269,7 +269,9 @@
 .postImg {
     position: absolute;
     left: 20px;
-    top: 25px;
+    // top: 25px;
+    top: 74px;
+    
     cursor: pointer;
 }
 .postImg2{
