updated load img, & fix delete btn

--- a/src/modules/CommentContainer/PostList/post-list.module.css
+++ b/src/modules/CommentContainer/PostList/post-list.module.css
@@ -5,7 +5,7 @@
 }
 
 .item {
-    border: 1px solid;
+    background: darkseagreen;
         width: 500px;
         display: flex;
         padding: 5px;
