--- a/src/modules/CommentContainer/PostList/post-list.module.css
+++ b/src/modules/CommentContainer/PostList/post-list.module.css
@@ -1,32 +1,33 @@
-.wrap{
-    gap: 10px;
-        display: flex;
-        flex-direction: column;
+.wrap {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .item {
-    background: darkseagreen;
-        width: 500px;
-        display: flex;
-        padding: 5px;
-        flex-direction: column;
-    list-style: nones;
-    border-radius: 5px;
+  width: 500px;
+  display: flex;
+  padding: 5px;
+  margin: auto;
+  box-shadow: 0 0 40px rgb(0 0 0 / 20%);
+  flex-direction: column;
+  list-style: nones;
+  border-radius: 5px;
+  padding: 20px;
 }
 
 .btn {
-display: block;
-    margin-left: auto;
-    /* margin-right: auto; */
-    padding: 2px 10px;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    color: var(--white-color);
-    border: transparent;
-    background: #188ce8;
-    box-shadow: 0px 4px 4px var(--modal-btn-box-sha);
-    border-radius: 4px;
-    cursor: pointer;
+  display: block;
+  margin-left: auto;
+  padding: 2px 10px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  border: transparent;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px var(--modal-btn-box-sha);
+  border-radius: 4px;
+  cursor: pointer;
 }
