--- a/src/modules/CommentContainer/PostList/post-list.module.css
+++ b/src/modules/CommentContainer/PostList/post-list.module.css
@@ -18,6 +18,7 @@
 
 .btn {
   display: block;
+  margin-top: 20px;
   margin-left: auto;
   padding: 2px 10px;
   font-weight: bold;
@@ -30,4 +31,14 @@
   box-shadow: 0px 4px 4px var(--modal-btn-box-sha);
   border-radius: 4px;
   cursor: pointer;
+}
+.tags{
+  list-style: none;
+    background: gainsboro;
+    display: flex;
+    gap: 20px;
+    align-items: flex-end;
+    margin-bottom: 20px;
+    border-radius: inherit;
+    padding: 10px;
 }
